--- a/index.html
+++ b/index.html
@@ -14,9 +14,8 @@
 
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<link rel="shortcut icon" href="">
-
 	<link rel="stylesheet" href="/style.css">
+	<link rel="shortcut icon" href="favicon.ico">
 	<link href="https://fonts.googleapis.com/css2?family=Cardo:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
 </head>
 
